// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engine Types expected(CLI=binary, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x) : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x) : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x) : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x) : version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=binary, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=binary PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary)   schema(engineType=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary)   schema(engineType=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary)   schema(engineType=binary): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary)   schema(engineType=binary): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=binary, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=undefined) : version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined)  schema(engineType=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined)  schema(engineType=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined)  schema(engineType=binary): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined)  schema(engineType=binary): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x)  schema(engineType=binary): ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x)  schema(engineType=binary): ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x)  schema(engineType=binary): ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=binary) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=undefined PRISMA_QUERY_ENGINE_BINARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/binary/Linux/query-engine-debian-openssl-1.1.x)  schema(engineType=binary): version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api)  : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api)  : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api)  : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api)  : version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at node_modules/@prisma/engines/libquery_engine-debian-openssl-1.1.x.so.node)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined) : ./node_modules/prisma 1`] = `
Array [
  "LICENSE",
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Engine Types expected(CLI=node-api, CLIENT=node-api) env(PRISMA_CLIENT_ENGINE_TYPE=undefined, PRISMA_CLI_QUERY_ENGINE_TYPE=undefined PRISMA_QUERY_ENGINE_LIBRARY=/home/will/Prisma/e2e-tests/engines/engine-types/custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node PRISMA_QUERY_ENGINE_BINARY=undefined) : version output @ 0 - env 1`] = `
"prisma                   : placeholder 
@prisma/client           : placeholder 
Current platform         : placeholder 
Query Engine (Node-API)  : placeholder (at custom-engines/library/Linux/libquery_engine-debian-openssl-1.1.x.so.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine         : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine     : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary            : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash     : placeholder 
Studio                   : placeholder "
`;
